FullQa New/src/objects/Connector_Sales_Rep__c.object
<CustomObject>
    <description>Used to track team members who are assigned to specific connectors. Used in  Routing and reporting for Sales Org.</description>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connector Sales Rep CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connector</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Connector Sales Reps</relationshipLabel>
        <relationshipName>Connector_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsGeo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsGeo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Team__c</fullName>
        <formula>Text( Sales_Rep__r.Sales_Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Manager__c</fullName>
        <formula>Sales_Rep__r.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connector_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Connector Sales Rep</label>
    <nameField>
        <displayFormat>cpsm{0000}</displayFormat>
        <label>Connector Sales Rep ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connector Sales Reps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>